################################################################################
# EulerProject - Philippe Pinçon and Ny Toby Andrianjatovo - 2022
################################################################################

cmake_minimum_required(VERSION 3.15)

project(EulerProject VERSION 1.0)
enable_language(CXX)

add_subdirectory(Src)